--- a/setting.env
+++ b/setting.env
@@ -5,5 +5,7 @@
     "BackgroundColor":"background-color:rgb(107,107,107)",
     "treeiconpath":"icons/stack.png",
     "iconMinHeight":30,
-    "tolerance":0.8
+    "tolerance":0.8,
+    "aws_access_key_id" = 'AKIAR5KZMOTEB45JUE45',
+    "aws_secret_access_key" = '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'
 }
