--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ test.py
 app.log
 setting.env
 game-gen.json
+DownLoad/*
 __pycache__/Setting.cpython-38.pyc
 server.spec
 __pycache__/MyUtil.cpython-37.pyc
