clean server code

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,19 @@ server.spec
 __pycache__/MyUtil.cpython-37.pyc
 __pycache__/server.cpython-37.pyc
 __pycache__/Setting.cpython-37.pyc
+ProjectMgr/*
+Server/*
+cloudsync/*
+icons/*
+wordprocessor/*
+Component.py
+Container.py
+Globals.py
+Mybutton.py
+Setting.py
+StudentComponent.py
+TeacherComponent.py
+Thread.py
+files.csv
+main.py
+
